--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,10 +2,10 @@
 {{ partial "meta.html" . }}
 <title>
 {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
-{{ if eq $url "/" }}
+{{ if eq $url "" }}
     {{ .Site.Title }}
 {{ else }}
-    {{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}
+    {{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Site.Title }} - {{ .Title }} {{ end }}
 {{ end }}
 </title>
 <link rel="canonical" href="{{ .Permalink }}">
