--- a/layouts/life/single.html
+++ b/layouts/life/single.html
@@ -15,7 +15,7 @@
                     <div class="date" title='{{ .Date.Format "Mon Jan 2 2006 15:04:05 MST" }}'>{{ .Date.Format "Jan 2, 2006" }}</div>
                     {{ end }}
                     {{ if not .Site.Params.noshowreadtime }}
-		    <div class="reading-time"><div class="middot"></div>{{ i18n "readingTime" .ReadingTime }}</div>
+                    <div class="reading-time"><div class="middot"></div>{{ i18n "readingTime" .ReadingTime }}</div>
                     {{ end }}
                 </div>
             </div>
@@ -24,7 +24,6 @@
                 <br>
                 {{ if .Params.tags }}
                   <div class="tags">
-                    <strong>Tags:</strong>
                   {{range .Params.tags}}
                     <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
                   {{end}}
@@ -38,19 +37,7 @@
                 {{ template "_internal/disqus.html" . }}
             </div>
             {{ if .Site.Params.gitalk }}
-            <div id="gitalk-container"></div>
-            <script type="text/javascript">
-                const gitalk = new Gitalk({
-                  clientID: "{{ .Site.Params.gitalk_clientID }}",
-                  clientSecret: "{{ .Site.Params.gitalk_clientSecret }}",
-                  repo: "{{ .Site.Params.gitalk_repo }}",
-                  owner: "{{ .Site.Params.gitalk_owner }}",
-                  admin: {{ .Site.Params.gitalk_admin }},
-                  // facebook-like distraction free mode
-                  distractionFreeMode: true
-                })
-                gitalk.render('gitalk-container')
-            </script>
+                {{ partial "gitalk.html" . }}
             {{ end }}
         </div>
     </div>
