--- a/layouts/life/list.html
+++ b/layouts/life/list.html
@@ -10,7 +10,7 @@
             <div class="page-heading">{{ i18n "lifeHeading" }}</div>
             <ul>
                 {{ if eq .Site.Params.bloggroupby "month" }}
-                    {{ $.Scratch.Set "datespec"  "一月, 2006" }}
+                    {{ $.Scratch.Set "datespec" "Jan, 2006" }}
                 {{ else if eq .Site.Params.bloggroupby "year" }}
                     {{ $.Scratch.Set "datespec" "2006" }}
                 {{ end }}
